# get_dir_hash

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs
